<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tipPercentTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percentage" />

    <EditText
        android:id="@+id/tipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipPercentTxtView"
        android:layout_alignRight="@+id/tipPercentTxtView"
        android:layout_below="@+id/tipPercentTxtView"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/TIP_PERCENTAGE" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipPercentage"
        android:layout_alignBottom="@+id/tipPercentage"
        android:layout_alignLeft="@+id/subtotalTxtView"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/SUBTOTAL" />

    <TextView
        android:id="@+id/subtotalTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipPercentTxtView"
        android:layout_alignBottom="@+id/tipPercentTxtView"
        android:layout_alignParentRight="true"
        android:text="@string/subtotal" />

    <TextView
        android:id="@+id/tipAmountTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/subtotal"
        android:layout_centerVertical="true"
        android:text="@string/tip_amount" />

    <TextView
        android:id="@+id/totalBillTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tipAmountTxtView"
        android:layout_alignParentLeft="true"
        android:text="@string/total_bill" />

    <TextView
        android:id="@+id/totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/totalBillTxtView"
        android:layout_marginTop="31dp"
        android:text="@string/TOTAL_BILL"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/totalBill"
        android:layout_alignParentRight="true"
        android:text="@string/TIP_AMOUNT"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>